--- a/plop-templates/module/list.hbs
+++ b/plop-templates/module/list.hbs
@@ -4,8 +4,7 @@
   import usePagination from '@/util/usePagination.js'
   import {ElMessage, ElMessageBox, ElTable} from 'element-plus'
   import {get} from 'lodash-es'
-  import type {{{ pascalCase moduleName }}Params} from '@/api/modules/{{#if
-        relativePath}}{{ relativePath }}/{{/if}}model/{{ snakeCase moduleName }}Model'
+  import type {{{ pascalCase moduleName }}Params} from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}model/{{ snakeCase moduleName }}Model'
 
   defineOptions({
     name: '{{ properCase componentName }}',
