--- a/plop-templates/module/mode.hbs
+++ b/plop-templates/module/mode.hbs
@@ -32,12 +32,25 @@ const myVisible = computed({
 
 const form = ref<InstanceType<typeof DetailForm>>()
 
-const title = computed(() => props.id === '' ? '新增{{ cname }}' : '编辑{{ cname }}')
+const title = computed(() => {
+  switch (props.type) {
+    case 'add':
+      return '新增{{ cname }}'
+    case 'edit':
+      return '编辑{{ cname }}'
+    case 'view':
+      return '查看{{ cname }}'
+    default:
+      return '查看角色'
+  }
+})
 
 function onSubmit() {
   // submit() 为组件内部方法
-  form.value?.submit(() => {
-    emits('success')
+  form.value?.submit((success = true) => {
+    if (success) {
+      emits('success')
+    }
     onCancel()
   })
 }
