--- a/plop-templates/module/list.hbs
+++ b/plop-templates/module/list.hbs
@@ -1,8 +1,6 @@
 <script lang="ts" setup>
-  import type {{{ pascalCase moduleName }}Params} from '@/api/modules/{{#if
-        relativePath}}{{ relativePath }}/{{/if}}model/{{ moduleName }}Model'
-  import crud{{properCase moduleName}}
-    from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}{{ moduleName }}'
+  import type {{{ pascalCase moduleName }}Params} from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}model/{{ moduleName }}Model'
+  import crud{{properCase moduleName}} from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}{{ moduleName }}'
   import FormMode from './components/FormMode/index.vue'
   import eventBus from '@/util/eventBus'
   import usePagination from '@/util/usePagination.js'
