--- a/plop-templates/module/api.hbs
+++ b/plop-templates/module/api.hbs
@@ -1,54 +1,50 @@
 import api from '@/api'
 import type { BasicPageParams } from '@/api/model/baseModel'
-import type { {{ pascalCase moduleName }}ListItem, {{ pascalCase moduleName }}PageListGetResultModel, {{ pascalCase moduleName }}Params } from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}model/{{ snakeCase moduleName }}Model'
+import type { {{ pascalCase moduleName }}ListItem, {{ pascalCase moduleName }}PageListGetResultModel, {{ pascalCase moduleName }}Params } from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}model/{{ pascalCase moduleName }}Model'
 
 // 前缀 变量
-const prefix = '/{{#if relativePath}}{{ relativePath }}/{{/if}}{{ snakeCase moduleName }}'
-export function getList{{ pascalCase moduleName }}(params: BasicPageParams
-<{{ pascalCase moduleName }}Params>) {
-  return api.post
-  <{{ pascalCase moduleName }}PageListGetResultModel>({
+const prefix = '/{{#if relativePath}}{{ relativePath }}/{{/if}}{{ pascalCase moduleName }}'
+export function getList{{ pascalCase moduleName }}(params: BasicPageParams & {{ pascalCase moduleName }}Params) {
+  return api.post<{{ pascalCase moduleName }}PageListGetResultModel>({
     url: `${prefix}/page`,
     params,
-    })
-    }
-    export function detail{{ pascalCase moduleName }}(id: string | number) {
-    return api.get
-    <{{ pascalCase moduleName }}ListItem>({
-      url: `${prefix}/detail`,
-      params: {
+  })
+}
+export function detail{{ pascalCase moduleName }}(id: string | number) {
+  return api.get<{{ pascalCase moduleName }}ListItem>({
+    url: `${prefix}/detail`,
+    params: {
       id,
-      },
-      })
+    },
+  })
 }
 
-      export function create{{ pascalCase moduleName }}(data: any) {
+export function create{{ pascalCase moduleName }}(data: any) {
   return api.post<{{ pascalCase moduleName }}ListItem>({
-        url: `${prefix}`,
-        data,
-        })
-        }
+    url: `${prefix}`,
+    data,
+  })
+}
 
-        export function edit{{ pascalCase moduleName }}(data: any) {
-        return api.put
-        <void>({
-          url: `${prefix}`,
-          data,
-          })
-          }
+export function edit{{ pascalCase moduleName }}(data: any) {
+  return api.put<void>({
+    url: `${prefix}`,
+    data,
+  })
+}
 
-          export function delete{{ pascalCase moduleName }}(ids: string[]) {
-          return api.delete
-          <void>({
-            url: `${prefix}`,
-            data: ids,
-            })
-            }
-
-            export default {
-            list: getList{{ pascalCase moduleName }},
-            detail: detail{{ pascalCase moduleName }},
-            create: create{{ pascalCase moduleName }},
-            edit: edit{{ pascalCase moduleName }},
-            delete: delete{{ pascalCase moduleName }},
-            }
+export function delete{{ pascalCase moduleName }}(ids: string[]) {
+  return api.post<void>({
+    url: `${prefix}/delete`,
+    data: {
+        ids,
+    },
+  })
+}
+export default {
+  list: getList{{ pascalCase moduleName }},
+  detail: detail{{ pascalCase moduleName }},
+  create: create{{ pascalCase moduleName }},
+  edit: edit{{ pascalCase moduleName }},
+  delete: delete{{ pascalCase moduleName }},
+}
