--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -4,7 +4,7 @@
 @use "./element.plus.customized.scss" as *;
 @use "./element.plus.customized.dark.scss" as *;
 @use "./element.plus.override.scss" as *;
-
+@use "./vxe.scss" as *;
 // 全局样式
 ::-webkit-scrollbar {
   width: 12px;
