--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -1,54 +1,67 @@
-@use "./tailwind.scss" as *;
 @use "./layout.scss" as *;
-@use "./element.plus.system.override.scss" as *;
-@use "./element.plus.customized.scss" as *;
-@use "./element.plus.customized.dark.scss" as *;
-@use "./element.plus.override.scss" as *;
 @use "./vxe.scss" as *;
 // 全局样式
+
+:root {
+  --g-box-shadow-color: rgb(0 0 0 / 12%)
+}
+
+:root::view-transition-old(root), :root::view-transition-new(root) {
+  animation: none;
+  mix-blend-mode: normal
+}
+
+:root::view-transition-old(root) {
+  z-index: 1
+}
+
+:root::view-transition-new(root) {
+  z-index: 9999
+}
+
+:root.dark {
+  --g-box-shadow-color: rgb(0 0 0 / 72%)
+}
+
+:root.dark::view-transition-old(root) {
+  z-index: 9999
+}
+
+:root.dark::view-transition-new(root) {
+  z-index: 1
+}
+
+
 ::-webkit-scrollbar {
   width: 12px;
   height: 12px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(0 0 0 / 40%);
+  background-color: rgba(0, 0, 0, 0.4);
   background-clip: padding-box;
   border: 3px solid transparent;
   border-radius: 6px;
-}
 
-::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(0 0 0 / 50%);
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
 }
 
 ::-webkit-scrollbar-track {
   background-color: transparent;
 }
 
-:root {
-  --g-box-shadow-color: rgb(0 0 0 / 12%);
-
-  &.dark {
-      --g-box-shadow-color: rgb(0 0 0 / 72%);
-  }
-
-  @include set-themes-css-var;
-
-}
-
-html, body {
+html {
   height: 100%;
 }
 
-html{
-  line-height: normal;
-}
-
 body {
+  height: 100%;
   margin: 0;
+  background-color: var(--g-container-bg);
   box-sizing: border-box;
-  font-family: Lato, "PingFang SC", "Microsoft YaHei", sans-serif;
+  font-family: Lato, PingFang SC, Microsoft YaHei, sans-serif;
   -webkit-tap-highlight-color: transparent;
 
   &.overflow-hidden {
@@ -60,68 +73,74 @@ body {
   box-sizing: inherit;
 }
 
-:focus,
-.focus-visible:focus:not(:focus-visible) {
-  outline: none;
-  box-shadow: none;
-}
-
-:is(.el-dropdown,.el-tooltip__trigger):focus-visible {
-  outline: unset;
-}
-
-// input:-internal-autofill-selected{
-//   background-color: #fff !important;
-// }
-
-:root input:-webkit-autofill,
-textarea:-webkit-autofill,
-select:-webkit-autofill {
-  box-shadow: 0 0 50px 50px #fff inset;
-  background: none !important;
-
-  /* 阴影大小等于input框宽度一半 利用内阴影覆盖原背景色 */
-
-  // -webkit-text-fill-color: #666; /* 利用文本填充属性覆盖原有文本颜色 */
-}
-// 右侧内容区针对fixed元素，有横向铺满的需求，可在fixed元素上设置 [data-fixed-calc-width]
 [data-fixed-calc-width] {
   position: fixed;
   left: 50%;
   right: 0;
 }
 
-[data-app-width-mode="adaption"],
-[data-app-width-mode="adaption-min-width"] {
-  [data-fixed-calc-width] {
-      width: calc(100% - var(--g-main-sidebar-actual-width) - var(--g-sub-sidebar-actual-width));
-      transform: translateX(-50%) translateX(calc(var(--g-main-sidebar-actual-width) / 2)) translateX(calc(var(--g-sub-sidebar-actual-width) / 2));
+[data-app-width-mode=adaption] [data-fixed-calc-width], [data-app-width-mode=adaption-min-width] [data-fixed-calc-width] {
+  width: calc(100% - var(--g-main-sidebar-actual-width) - var(--g-sub-sidebar-actual-width));
+  transform: translate(-50%) translate(calc(var(--g-main-sidebar-actual-width) / 2)) translate(calc(var(--g-sub-sidebar-actual-width) / 2));
+}
+
+[data-app-width-mode=center] [data-fixed-calc-width], [data-app-width-mode=center-max-width] [data-fixed-calc-width] {
+  width: calc(var(--g-app-width) - var(--g-main-sidebar-actual-width) - var(--g-sub-sidebar-actual-width));
+  transform: translate(-50%) translate(calc(var(--g-main-sidebar-actual-width) / 2)) translate(calc(var(--g-sub-sidebar-actual-width) / 2));
+}
+
+@media screen and (max-width: 1400px) {
+  [data-app-width-mode=center] [data-fixed-calc-width], [data-app-width-mode=center-max-width] [data-fixed-calc-width] {
+    width: calc(100% - var(--g-main-sidebar-actual-width) - var(--g-sub-sidebar-actual-width));
+    transform: translate(-50%) translate(calc(var(--g-main-sidebar-actual-width) / 2)) translate(calc(var(--g-sub-sidebar-actual-width) / 2));
   }
 }
 
-[data-app-width-mode="center"],
-[data-app-width-mode="center-max-width"] {
-  [data-fixed-calc-width] {
-      width: calc(var(--g-app-width) - var(--g-main-sidebar-actual-width) - var(--g-sub-sidebar-actual-width));
-      transform: translateX(-50%) translateX(calc(var(--g-main-sidebar-actual-width) / 2)) translateX(calc(var(--g-sub-sidebar-actual-width) / 2));
-  }
-
-  @media screen and (max-width: $g-app-width) {
-      [data-fixed-calc-width] {
-          width: calc(100% - var(--g-main-sidebar-actual-width) - var(--g-sub-sidebar-actual-width));
-          transform: translateX(-50%) translateX(calc(var(--g-main-sidebar-actual-width) / 2)) translateX(calc(var(--g-sub-sidebar-actual-width) / 2));
-      }
-  }
-}
-
-[data-mode="mobile"] {
-  [data-fixed-calc-width] {
-      width: 100% !important;
-      transform: translateX(-50%) !important;
-  }
+[data-mode=mobile] [data-fixed-calc-width] {
+  width: 100% !important;
+  transform: translate(-50%) !important;
 }
 
 // textarea 字体跟随系统
 textarea {
   font-family: inherit;
+}
+
+/* Overrides Floating Vue */
+.v-popper--theme-dropdown,
+.v-popper--theme-tooltip {
+  --at-apply: inline-flex;
+}
+
+.v-popper--theme-dropdown .v-popper__inner,
+.v-popper--theme-tooltip .v-popper__inner {
+  --at-apply: bg-white
+  dark: bg-stone-8 text-dark
+  dark: text-white rounded shadow ring-1 ring-gray-200
+  dark: ring-gray-800 border border-solid border-stone/20 text-xs font-normal;
+
+  box-shadow: 0 6px 30px rgb(0 0 0 / 10%);
+}
+
+.v-popper--theme-tooltip .v-popper__arrow-inner,
+.v-popper--theme-dropdown .v-popper__arrow-inner {
+  visibility: visible;
+
+  --at-apply: border-white
+  dark: border-stone-8;
+}
+
+.v-popper--theme-tooltip .v-popper__arrow-outer,
+.v-popper--theme-dropdown .v-popper__arrow-outer {
+  --at-apply: border-stone/20;
+}
+
+.v-popper--theme-tooltip.v-popper--shown,
+.v-popper--theme-tooltip.v-popper--shown * {
+  transition: none !important;
+}
+
+
+[data-overlayscrollbars-contents] {
+  overscroll-behavior: contain;
 }
