--- a/src/assets/styles/nprogress.scss
+++ b/src/assets/styles/nprogress.scss
@@ -8,7 +8,7 @@
     left: 0;
     width: 100%;
     height: 2px;
-    background: var(--g-nprogress-color);
+    background: rgb(var(--ui-primary));
   }
 
   .peg {
@@ -18,8 +18,8 @@
     width: 100px;
     height: 100%;
     opacity: 1;
-    transform: rotate(3deg) translate(0, -4px);
-    box-shadow: 0 0 10px var(--g-nprogress-color), 0 0 5px var(--g-nprogress-color);
+    transform: rotate(3deg) translateY(-4px);
+    box-shadow: 0 0 10px rgb(var(--ui-primary)), 0 0 5px rgb(var(--ui-primary));
   }
 
   .spinner {
@@ -35,9 +35,9 @@
       box-sizing: border-box;
       border: solid 2px transparent;
       border-radius: 50%;
-      animation: nprogress-spinner 400ms linear infinite;
-      border-top-color: var(--g-nprogress-color);
-      border-left-color: var(--g-nprogress-color);
+      border-top-color: rgb(var(--ui-primary));
+      border-left-color: rgb(var(--ui-primary));
+      animation: nprogress-spinner 0.4s linear infinite;
     }
   }
 }
@@ -46,18 +46,19 @@
   overflow: hidden;
   position: relative;
 
-  #nprogress .spinner,
-  #nprogress .bar {
-    position: absolute;
+  #nprogress {
+    .spinner, .bar {
+      position: absolute;
+    }
   }
 }
 
 @keyframes nprogress-spinner {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
+  0% {
+    transform: rotate(0);
+  }
 
-@keyframes nprogress-spinner {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  to {
+    transform: rotate(360deg);
+  }
 }
