功能图片预览

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -142,3 +142,7 @@ textarea {
 [data-overlayscrollbars-contents] {
   overscroll-behavior: contain;
 }
+
+.medium-zoom-overlay,.medium-zoom-image {
+  z-index: 3000
+}
