--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -143,6 +143,7 @@ textarea {
   overscroll-behavior: contain;
 }
 
-.medium-zoom-overlay,.medium-zoom-image {
-  z-index: 3000
+.medium-zoom-overlay,
+.medium-zoom-image {
+  z-index: 3000;
 }
