--- a/public/loading.css
+++ b/public/loading.css
@@ -1,95 +1,95 @@
 #app {
-    height: 100%;
+  height: 100%;
 }
 
-.vue-ts-admin-home {
-    position: absolute;
-    z-index: 10000;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    user-select: none;
-    color: #736477;
-    background-color: snow;
+.kpu-web-home {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #736477;
+  user-select: none;
+  background-color: snow;
 }
 
-.vue-ts-admin-home .loading {
-    height: 40px;
-    width: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+.kpu-web-home .loading {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
 }
 
-.vue-ts-admin-home .square {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 20px;
-    width: 20px;
+.kpu-web-home .square {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
 }
 
-.vue-ts-admin-home .square::before {
-    content: "";
-    width: 10px;
-    height: 10px;
-    border-radius: 15%;
-    border: 3px solid #8c858f;
+.kpu-web-home .square::before {
+  width: 10px;
+  height: 10px;
+  content: "";
+  border: 3px solid #8c858f;
+  border-radius: 15%;
 }
 
-.vue-ts-admin-home .loading.animate .square::before {
-    animation: square-to-dot-animation 1.2s linear;
+.kpu-web-home .loading.animate .square::before {
+  animation: square-to-dot-animation 1.2s linear;
 }
 
-.vue-ts-admin-home .loading.animate .square:nth-child(1)::before {
-    animation-delay: calc(100ms * 1);
+.kpu-web-home .loading.animate .square:nth-child(1)::before {
+  animation-delay: calc(100ms * 1);
 }
 
-.vue-ts-admin-home .loading.animate .square:nth-child(2)::before {
-    animation-delay: calc(100ms * 2);
+.kpu-web-home .loading.animate .square:nth-child(2)::before {
+  animation-delay: calc(100ms * 2);
 }
 
-.vue-ts-admin-home .loading.animate .square:nth-child(3)::before {
-    animation-delay: calc(100ms * 3);
+.kpu-web-home .loading.animate .square:nth-child(3)::before {
+  animation-delay: calc(100ms * 3);
 }
 
-.vue-ts-admin-home .loading.animate .square:nth-child(4)::before {
-    animation-delay: calc(100ms * 4);
+.kpu-web-home .loading.animate .square:nth-child(4)::before {
+  animation-delay: calc(100ms * 4);
 }
 
 @keyframes square-to-dot-animation {
-    15%,
-    55% {
-        border-radius: 100%;
-        width: 0;
-        height: 0;
-        margin: 5px;
-        border-width: 5px;
-    }
+  15%,
+  55% {
+    width: 0;
+    height: 0;
+    margin: 5px;
+    border-width: 5px;
+    border-radius: 100%;
+  }
 
-    70% {
-        border-radius: 15%;
-        width: 10px;
-        height: 10px;
-        margin: initial;
-        border-width: 3px;
-    }
+  70% {
+    width: 10px;
+    height: 10px;
+    margin: initial;
+    border-width: 3px;
+    border-radius: 15%;
+  }
 }
 
-.vue-ts-admin-home .text {
-    position: relative;
-    font-size: 24px;
-    margin-top: 20px;
+.kpu-web-home .text {
+  position: relative;
+  margin-top: 20px;
+  font-size: 24px;
 }
 
-.vue-ts-admin-home .text::after {
-    content: "…";
-    position: absolute;
-    padding-left: 5px;
+.kpu-web-home .text::after {
+  position: absolute;
+  padding-left: 5px;
+  content: "…";
 }
